systems/java-monolith/k8s/overlays/eks/patch-service-loadbalancer.yaml
# k8s/overlays/eks/patch-service-loadbalancer.yaml
# Patches bankapp-service to use an AWS NLB

apiVersion: v1
kind: Service
metadata:
  name: bankapp-service
  namespace: bankapp
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
