systems/java-monolith/k8s/overlays/eks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bankapp-route
  namespace: bankapp
  labels:
    app.kubernetes.io/name: bankapp
    environment: eks
spec:
  parentRefs:
    - name: bankapp-gateway
  hostnames:
    - "java-monolith.ibtisam-iq.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bankapp-service
          port: 80
